--- a/src/index.html
+++ b/src/index.html
@@ -35,23 +35,21 @@
             <a href="#" class="btn btn--red">Заказать</a>
           </div>
         </header>
-        <div class="hero__container">
-          <div class="hero__content">
-            <div class="hero__picture">
-              <img src="images/content/intro/burger_main.png" alt="" class="hero__burger">
-            </div>
-            <div class="hero__text">
-              <hi class="title">Мы делаем</hi>
-              <div class="hero__disc">Натуральные Бургеры</div>
-            </div>
+        <div class="hero__content">
+          <div class="hero__picture">
+            <img src="images/content/intro/burger_main.png" alt="" class="hero__burger">
+          </div>
+          <div class="hero__text">
+            <h2 class="title title-hero">Мы делаем</h2>
+            <div class="hero__disc">Натуральные Бургеры</div>
           </div>
         </div>
+        <button class="to-next-section"><img src="images/icons/arrow-scroll.svg" alt="" class="arrow"></button>
       </div>
-      <button class="to-next-section"></button>
     </section>
     <section class="best section">
       <div class="container">
-        <div class="title title--color-black">Мы лучшие</div>
+        <h2 class="title title--color-black">Мы лучшие</h2>
         <ul class="best__list">
           <li class="best__item">
             <div class="best__img">
@@ -103,8 +101,8 @@
             <div class="review__content">
               <h5 class="review__name">Константин Спилберг</h5>
               <div class="review__text"><p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p></div>
-              <div class="btn btn--review">Подробнее</div>
-              <div class="btn btn--review btn--review-phones">Читать отзыв</div>
+              <button class="btn btn--review">Подробнее</button>
+              <button class="btn btn--review btn--review-phones">Читать отзыв</button>
             </div>
           </div>
         </li>
@@ -114,8 +112,8 @@
             <div class="review__content">
               <h5 class="review__name">Константин Спилберг</h5>
               <div class="review__text"><p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p></div>
-              <div class="btn btn--review">Подробнее</div>
-              <div class="btn btn--review btn--review-phones">Читать отзыв</div>
+              <button class="btn btn--review">Подробнее</button>
+              <button class="btn btn--review btn--review-phones">Читать отзыв</button>
             </div>
           </div>
         </li>
@@ -125,8 +123,8 @@
             <div class="review__content">
               <h5 class="review__name">Константин Спилберг</h5>
               <div class="review__text"><p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p></div>
-              <div class="btn btn--review">Подробнее</div>
-              <div class="btn btn--review btn--review-phones">Читать отзыв</div>
+              <button class="btn btn--review">Подробнее</button>
+              <button class="btn btn--review btn--review-phones">Читать отзыв</button>
             </div>
           </div>
         </li>
@@ -136,8 +134,8 @@
             <div class="review__content">
               <h5 class="review__name">Константин Спилберг</h5>
               <div class="review__text"><p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p></div>
-              <div class="btn btn--review">Подробнее</div>
-              <div class="btn btn-review btn--review-phones">Читать отзыв</div>
+              <button class="btn btn--review">Подробнее</button>
+              <button class="btn btn-review btn--review-phones">Читать отзыв</button>
             </div>
           </div>
         </li>
@@ -147,8 +145,8 @@
             <div class="review__content">
               <h5 class="review__name">Константин Спилберг</h5>
               <div class="review__text"><p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p></div>
-              <div class="btn btn--review">Подробнее</div>
-              <div class="btn btn--review btn--review-phones">Читать отзыв</div>
+              <button class="btn btn--review">Подробнее</button>
+              <button class="btn btn--review btn--review-phones">Читать отзыв</button>
             </div>
           </div>
         </li>
@@ -158,8 +156,8 @@
             <div class="review__content">
               <h5 class="review__name">Константин Спилберг</h5>
               <div class="review__text"><p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p></div>
-              <div class="btn btn--review">Подробнее</div>
-              <div class="btn btn--review btn--review-phones">Читать отзыв</div>
+              <button class="btn btn--review">Подробнее</div>
+              <button class="btn btn--review btn--review-phones">Читать отзыв</button>
             </div>
           </div>
         </li>
@@ -169,8 +167,8 @@
             <div class="review__content">
               <h5 class="review__name">Константин Спилберг</h5>
               <div class="review__text"><p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p></div>
-              <div class="btn btn--review">Подробнее</div>
-              <div class="btn btn--review btn--review-phones">Читать отзыв</div>
+              <button class="btn btn--review">Подробнее</button>
+              <button class="btn btn--review btn--review-phones">Читать отзыв</button>
             </div>
           </div>
         </li>
@@ -180,8 +178,8 @@
             <div class="review__content">
               <h5 class="review__name">Константин Спилберг</h5>
               <div class="review__text"><p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p></div>
-              <div class="btn btn--review">Подробнее</div>
-              <div class="btn btn--review btn--review-phones">Читать отзыв</div>
+              <button class="btn btn--review">Подробнее</button>
+              <button class="btn btn--review btn--review-phones">Читать отзыв</button>
             </div>
           </div>
         </li>
