--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
             <img src="images/content/intro/burger_main.png" alt="" class="hero__burger">
           </div>
           <div class="hero__text">
-            <h2 class="title title-hero">Мы делаем</h2>
+            <h2 class="title title--hero">Мы делаем</h2>
             <div class="hero__disc">Натуральные Бургеры</div>
           </div>
         </div>
@@ -156,7 +156,7 @@
             <div class="review__content">
               <h5 class="review__name">Константин Спилберг</h5>
               <div class="review__text"><p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p></div>
-              <button class="btn btn--review">Подробнее</div>
+              <button class="btn btn--review">Подробнее</button>
               <button class="btn btn--review btn--review-phones">Читать отзыв</button>
             </div>
           </div>
