--- a/src/index.html
+++ b/src/index.html
@@ -366,7 +366,7 @@
                 <div class="form__radio-title">Не перезванивать</div>
               </label>
             </div>
-            <div class="form__row">
+            <div class="form__row form__row__delete">
               <a href="#" class="btn btn--red btn--red--order">Заказать</a>
               <div class="form__block-title">Очистить</div>
             </div>
@@ -425,6 +425,77 @@
         </div>
       </footer>
     </section>
+  </div>
+</div>
+
+<div class="nav-points">
+  <ul class="nav-points__list">
+    <li class="nav-points__item is-active">
+      <a href="#" class="nav-points__link" data-scroll-to="0"></a>
+    </li>
+    <li class="nav-points__item">
+      <a href="#" class="nav-points__link" data-scroll-to="1"></a>
+    </li>
+    <li class="nav-points__item">
+      <a href="#" class="nav-points__link" data-scroll-to="2"></a>
+    </li>
+    <li class="nav-points__item">
+      <a href="#" class="nav-points__link" data-scroll-to="3"></a>
+    </li>
+    <li class="nav-points__item">
+      <a href="#" class="nav-points__link" data-scroll-to="4"></a>
+    </li>
+    <li class="nav-points__item">
+      <a href="#" class="nav-points__link" data-scroll-to="5"></a>
+    </li>
+    <li class="nav-points__item">
+      <a href="#" class="nav-points__link" data-scroll-to="6"></a>
+    </li>
+    <li class="nav-points__item">
+      <a href="#" class="nav-points__link" data-scroll-to="7"></a>
+    </li>
+  </ul>
+</div>
+
+<div class="nav-trigger">
+  <a href="#" class="nav-trigger__link">
+    <div class="nav-trigger__badge"></div>
+  </a>
+</div>
+
+<div class="nav-mobile">
+  <nav class="nav-mobile__menu">
+    <ul class="nav-mobile__list">
+      <li class="nav-mobile__item">
+        <a href="#" class="nav-mobile__link" data-scroll-to="0">Главная</a>
+      </li>
+      <li class="nav-mobile__item">
+        <a href="#" class="nav-mobile__link" data-scroll-to="1">О нас</a>
+      </li>
+      <li class="nav-mobile__item">
+        <a href="#" class="nav-mobile__link" data-scroll-to="2">Бургеры</a>
+      </li>
+      <li class="nav-mobile__item">
+        <a href="#" class="nav-mobile__link" data-scroll-to="3">Команда</a>
+      </li>
+      <li class="nav-mobile__item">
+        <a href="#" class="nav-mobile__link" data-scroll-to="4">Меню</a>
+      </li>
+      <li class="nav-mobile__item">
+        <a href="#" class="nav-mobile__link" data-scroll-to="5">Отзывы</a>
+      </li>
+      <li class="nav-mobile__item">
+        <a href="#" class="nav-mobile__link" data-scroll-to="6">Заказать</a>
+      </li>
+      <li class="nav-mobile__item">
+        <a href="#" class="nav-mobile__link" data-scroll-to="7">Контакты</a>
+      </li>
+    </ul>
+  </nav>
+  <div class="logo">
+    <a href="" class="logo__link">
+      <img src="images/logo/logo.svg" alt="logo" class="logo__img">
+    </a>
   </div>
 </div>
 
