--- a/src/index.html
+++ b/src/index.html
@@ -364,7 +364,7 @@
                 </div>
                 <div class="form__row">
                   <label class="form__radio">
-                    <div class="form__sequare-fake"></div>
+                    <div class="form__sequare-fake"><img src="images/svgicons/check.svg" class="order__check"></div>
                     <div class="form__radio-title">Не перезванивать</div>
                   </label>
                 </div>
