--- a/src/index.html
+++ b/src/index.html
@@ -362,10 +362,11 @@
                     <div class="form__radio-title">Оплата по карте</div>
                   </label>
                 </div>
-                <div class="form__row">
-                  <label class="form__radio">
-                    <div class="form__sequare-fake"><img src="images/svgicons/check.svg" class="order__check"></div>
-                    <div class="form__radio-title">Не перезванивать</div>
+                <div class="form__row form__row__check">
+                  <label class="form__checkbox">
+                    <input type="checkbox" name="callback" class="form__checkbox-input" value="1">
+                    <div class="form__checkbox-fake"></div>
+                    <span class="form__block-title form__block-title--buttons">Не перезванивать</span>
                   </label>
                 </div>
                 <div class="form__row form__row__delete">
