--- a/src/index.html
+++ b/src/index.html
@@ -102,6 +102,48 @@
         </ul>
       </div>
     </section>
+    <section class="burgers section">
+      <div class="container container--center">
+        <div class="slider">
+          <div class="slider__controls">
+            <button class="scroll__btn scroll__btn--prev">
+              <svg class="arrow-scroll arrow-scroll--left">
+                <use xlink:href='images/symbol/sprite.svg#arrow-scroll'></use>
+              </svg>
+            </button>
+            <button class="scroll__btn scroll__btn--next">
+              <svg class="arrow-scroll arrow-scroll--right">
+                <use xlink:href='images/symbol/sprite.svg#arrow-scroll'></use>
+              </svg>
+            </button>
+          </div>
+          <div class="slider__frame">
+            <ul class="slider__list">
+              <li class="slider__item">
+                <div class="burger">
+                  <div class="burger__photo">
+                    <img src="images/content/burgers-slider/dark_beef.png" alt="" class="burger__img">
+                  </div>
+                  <div class="burger__desc">
+                    <h2 class="title title--burger">Dark beef burger</h2>
+                    <div class="burger__text">
+                      <p>Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.</p>
+                    </div>
+                    <div class="burger__order">
+                      <div class="burger__price">
+                        <span class="burger__price--number">500</span>
+                        <span class="burger__price--text">рублей</span>
+                      </div>
+                      <button class="btn btn--red">Заказать</button>
+                    </div>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="team section">
       <div class="team__section">
         <h2 class="title">Команда</h2>
@@ -251,7 +293,7 @@
               <h5 class="review__name">Константин Спилберг</h5>
               <div class="review__text"><p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p></div>
               <button class="btn btn--review">Подробнее</button>
-              <button class="btn btn-review btn--review-phones">Читать отзыв</button>
+              <button class="btn btn--review btn--review-phones">Читать отзыв</button>
             </div>
           </div>
         </li>
