--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
                 <li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
               </ul>
             </nav>
-            <a href="#" class="btn btn--red">Заказать</a>
+            <button class="btn btn--red">Заказать</button>
             <a href="#" class="hamburger-menu-link">
               <div class="hamburger-menu-link__bars"></div>
             </a>
@@ -413,7 +413,7 @@
                 </div>
                 <div class="form__row form__row__delete">
                   <a href="#" class="btn btn--red btn--red--order">Заказать</a>
-                  <div class="form__block-title">Очистить</div>
+                  <button class="btn btn--order form__block-title">Очистить</button>
                 </div>
               </div>
             </div>
@@ -545,6 +545,8 @@
     </a>
   </div>
 </div>
+
+<script src="scripts/main.js"></script>
 
 </body>
 
