--- a/src/index.html
+++ b/src/index.html
@@ -412,8 +412,8 @@
                   </label>
                 </div>
                 <div class="form__row form__row__delete">
-                  <a href="#" class="btn btn--red btn--red--order">Заказать</a>
-                  <button class="btn btn--order form__block-title">Очистить</button>
+                  <button class="btn btn--red">Заказать</button>
+                  <button type="reset" class="btn btn--order form__block-title">Очистить</button>
                 </div>
               </div>
             </div>
