--- a/src/index.html
+++ b/src/index.html
@@ -125,7 +125,87 @@
                     <img src="images/content/burgers-slider/dark_beef.png" alt="" class="burger__img">
                   </div>
                   <div class="burger__desc">
-                    <h2 class="title title--burger">Dark beef burger</h2>
+                    <h2 class="title title--burger">Dark beef burger 1</h2>
+                    <div class="burger__text">
+                      <p>Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.</p>
+                    </div>
+                    <div class="burger__order">
+                      <div class="burger__price">
+                        <span class="burger__price--number">500</span>
+                        <span class="burger__price--text">рублей</span>
+                      </div>
+                      <button class="btn btn--red">Заказать</button>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <li class="slider__item">
+                <div class="burger">
+                  <div class="burger__photo">
+                    <img src="images/content/burgers-slider/burger_sandwich_PNG4124.png" alt="" class="burger__img">
+                  </div>
+                  <div class="burger__desc">
+                    <h2 class="title title--burger">Dark beef burger 2</h2>
+                    <div class="burger__text">
+                      <p>Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.</p>
+                    </div>
+                    <div class="burger__order">
+                      <div class="burger__price">
+                        <span class="burger__price--number">500</span>
+                        <span class="burger__price--text">рублей</span>
+                      </div>
+                      <button class="btn btn--red">Заказать</button>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <li class="slider__item">
+                <div class="burger">
+                  <div class="burger__photo">
+                    <img src="images/content/burgers-slider/Chiken burger.png" alt="" class="burger__img">
+                  </div>
+                  <div class="burger__desc">
+                    <h2 class="title title--burger">Dark beef burger 3</h2>
+                    <div class="burger__text">
+                      <p>Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.</p>
+                    </div>
+                    <div class="burger__order">
+                      <div class="burger__price">
+                        <span class="burger__price--number">500</span>
+                        <span class="burger__price--text">рублей</span>
+                      </div>
+                      <button class="btn btn--red">Заказать</button>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <li class="slider__item">
+                <div class="burger">
+                  <div class="burger__photo">
+                    <img src="images/content/burgers-slider/NYC-Diner-Bacon-Cheeseburger.png" alt="" class="burger__img">
+                  </div>
+                  <div class="burger__desc">
+                    <h2 class="title title--burger">Dark beef burger 4</h2>
+                    <div class="burger__text">
+                      <p>Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.</p>
+                    </div>
+                    <div class="burger__order">
+                      <div class="burger__price">
+                        <span class="burger__price--number">500</span>
+                        <span class="burger__price--text">рублей</span>
+                      </div>
+                      <button class="btn btn--red">Заказать</button>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <li class="slider__item is-one">
+                <div class="burger">
+                  <div class="burger__photo">
+                    <img src="images/content/burgers-slider/Spicy_Shrimp_Burger.png" alt="" class="burger__img">
+                  </div>
+                  <div class="burger__desc">
+                    <h2 class="title title--burger">Dark beef burger 5</h2>
                     <div class="burger__text">
                       <p>Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.</p>
                     </div>
