--- a/src/index.html
+++ b/src/index.html
@@ -231,48 +231,56 @@
           <li class="team-acco__item ">
             <a href="" class="team-acco__name">Дэниэл Редклиф</a>
             <div class="team-acco__content">
-              <div class="team-acco__pic">
-                <div class="team-acco__img" style="background-image: url('images/content/photo-team/1.jpg') "></div>
-              </div>
-              <div class="team-acco__text">
-                <h6 class="team-acco__title">Оператор</h6>
-                <div class="team-acco__text-content">С радостью поможет подобрать идеальный бургер и оформить заказ.</div>
+              <div class="worker__content-wrapp">
+                <div class="team-acco__pic">
+                  <div class="team-acco__img" style="background-image: url('images/content/photo-team/1.jpg') "></div>
+                </div>
+                <div class="team-acco__text">
+                  <h6 class="team-acco__title">Оператор</h6>
+                  <div class="team-acco__text-content">С радостью поможет подобрать идеальный бургер и оформить заказ.</div>
+                </div>
               </div>
             </div>
           </li>
-          <li class="team-acco__item is-active">
+          <li class="team-acco__item">
             <a href="" class="team-acco__name">Ричард Джеймс</a>
             <div class="team-acco__content">
-              <div class="team-acco__pic">
-                <div class="team-acco__img" style="background-image: url('images/content/photo-team/1.jpg')"></div>
-              </div>
-              <div class="team-acco__text">
-                <h6 class="team-acco__title">Оператор</h6>
-                <div class="team-acco__text-content">С радостью поможет подобрать идеальный бургер и оформить заказ.</div>
+              <div class="worker__content-wrapp">
+                <div class="team-acco__pic">
+                  <div class="team-acco__img" style="background-image: url('images/content/photo-team/1.jpg')"></div>
+                </div>
+                <div class="team-acco__text">
+                  <h6 class="team-acco__title">Оператор</h6>
+                  <div class="team-acco__text-content">С радостью поможет подобрать идеальный бургер и оформить заказ.</div>
+                </div>
               </div>
             </div>
           </li>
           <li class="team-acco__item">
             <a href="" class="team-acco__name">Джейк Финн</a>
             <div class="team-acco__content">
-              <div class="team-acco__pic">
-                <div class="team-acco__img" style="background-image: url('images/content/photo-team/1.jpg')"></div>
-              </div>
-              <div class="team-acco__text">
-                <h6 class="team-acco__title">Оператор</h6>
-                <div class="team-acco__text-content">С радостью поможет подобрать идеальный бургер и оформить заказ.</div>
+              <div class="worker__content-wrapp">
+                <div class="team-acco__pic">
+                  <div class="team-acco__img" style="background-image: url('images/content/photo-team/1.jpg')"></div>
+                </div>
+                <div class="team-acco__text">
+                  <h6 class="team-acco__title">Оператор</h6>
+                  <div class="team-acco__text-content">С радостью поможет подобрать идеальный бургер и оформить заказ.</div>
+                </div>
               </div>
             </div>
           </li>
           <li class="team-acco__item">
             <a href="" class="team-acco__name">Николай Иванов</a>
             <div class="team-acco__content">
-              <div class="team-acco__pic">
-                <div class="team-acco__img" style="background-image: url('images/content/photo-team/1.jpg')"></div>    
-              </div>
-              <div class="team-acco__text">
-                <h6 class="team-acco__title">Оператор</h6>
-                <div class="team-acco__text-content">С радостью поможет подобрать идеальный бургер и оформить заказ.  </div>
+              <div class="worker__content-wrapp">
+                <div class="team-acco__pic">
+                  <div class="team-acco__img" style="background-image: url('images/content/photo-team/1.jpg')"></div>    
+                </div>
+                <div class="team-acco__text">
+                  <h6 class="team-acco__title">Оператор</h6>
+                  <div class="team-acco__text-content">С радостью поможет подобрать идеальный бургер и оформить заказ.  </div>
+                </div>
               </div>
             </div>
           </li>
@@ -283,7 +291,7 @@
       <div class="menu__section">
         <h2 class="title title--menu">Меню</h2>
         <ul class="menu-acco">
-          <li class="menu-acco__item is-active">
+          <li class="menu-acco__item">
             <a class="menu-acco__name" href="#" style="background-image: url('images/bg/menu-bg--1.jpg')">
               <span class="menu-acco__name-text">Для мясоедов</span>
             </a>
